--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
+  "name": "",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "farm start",
-    "start": "farm start",
-    "build": "farm build",
-    "preview": "farm preview",
-    "clean": "farm clean"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "react": "18",
-    "react-dom": "18"
-  },
-  "devDependencies": {
-    "@farmfe/cli": "^1.0.2",
-    "@farmfe/core": "^1.3.0",
-    "@farmfe/plugin-react": "^1.2.0",
-    "@types/react": "18",
-    "core-js": "^3.36.1",
-    "@types/react-dom": "18",
-    "react-refresh": "^0.14.0"
+    "@astrojs/check": "^0.9.3",
+    "astro": "^5.0.0-beta.1",
+    "typescript": "^5.6.2"
   }
 }
