--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/preact": "^3.5.3",
     "@astrojs/tailwind": "^5.1.1",
+    "@nanostores/preact": "^0.5.2",
     "astro": "^5.0.0-beta.1",
+    "nanostores": "^0.11.3",
+    "preact": "^10.24.0",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   }
